--- a/index.html
+++ b/index.html
@@ -4,27 +4,75 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <!-- Site title -->
-    <title>Html</title>
+    <title>Bitto</title>
 
-    <!-- Bootstrap css -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
-    <!-- Fontawesome css -->
-    <link rel="stylesheet" href="assets/css/fontawesome.min.css" />
-    <!-- Main Style css -->
     <link rel="stylesheet" href="assets/css/style.css" />
-    <!-- Responsive css -->
-    <link rel="stylesheet" href="assets/css/responsive.css" />
   </head>
   <body>
 
-    <!-- jQuery library -->
+    <div class="header-area">
+      <div class="top-header">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-12">
+              <div class="top-text">
+                <h4>BITTO Is now listed on Crex24 and Vindax Exchange. <a href="#" class="gradient-btn">BUY NOW at $0.50</a>Before Its Too Late</h4>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="header">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-12">
+              <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <a class="navbar-brand" href="#">
+                  <img src="assets/img/bitto-logo.png" alt="">
+                </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+              
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                  <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                      <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">Link</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Dropdown
+                      </a>
+                      <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="#">Action</a>
+                        <a class="dropdown-item" href="#">Another action</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#">Something else here</a>
+                      </div>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link disabled" href="#">Disabled</a>
+                    </li>
+                  </ul>
+                  <form class="form-inline my-2 my-lg-0">
+                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                  </form>
+                </div>
+              </nav>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <script src="assets/js/jquery.slim.min.js"></script>
-    <!-- Popper js -->
     <script src="assets/js/popper.min.js"></script>
-    <!-- Bootsrap js -->
     <script src="assets/js/bootstrap.min.js"></script>
-    <!-- Main js -->
     <script src="assets/js/main.js"></script>
   </body>
 </html>
