--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-12">
-              <nav class="navbar navbar-expand-lg navbar-light bg-light">
+              <nav class="navbar navbar-expand-lg">
                 <a class="navbar-brand" href="#">
                   <img src="assets/img/bitto-logo.png" alt="">
                 </a>
@@ -36,32 +36,42 @@
                 </button>
               
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                  <ul class="navbar-nav mr-auto">
+                  <ul class="navbar-nav">
                     <li class="nav-item active">
-                      <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                      <a class="nav-link" href="#">Intro</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">Link</a>
+                      <a class="nav-link" href="#">Type Of Investors</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">Genuine Cryptocurrency</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">Etherscan</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">Low Circulating <span>New</span></a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">Future Value</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">P-O-S</a>
                     </li>
                     <li class="nav-item dropdown">
                       <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Dropdown
+                        English <img src="assets/img/angle-down.png" alt="">
                       </a>
                       <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Something else here</a>
+                        <a class="dropdown-item active" href="#">English</a>
+                        <a class="dropdown-item" href="#">简体中文</a>
+                        <a class="dropdown-item" href="#">繁體中文</a>
+                        <a class="dropdown-item" href="#">Malay</a>
+                        <a class="dropdown-item" href="#">Tiếng Việt</a>
+                        <a class="dropdown-item" href="#">日本語</a>
                       </div>
                     </li>
-                    <li class="nav-item">
-                      <a class="nav-link disabled" href="#">Disabled</a>
-                    </li>
                   </ul>
-                  <form class="form-inline my-2 my-lg-0">
-                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                  </form>
                 </div>
               </nav>
             </div>
