added some changes

--- a/index.html
+++ b/index.html
@@ -80,6 +80,39 @@
       </div>
     </div>
 
+    <div class="intro-area">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-lg-9">
+            <div class="intro-text">
+              <h2>DO YOU BELONG TO<br> THIS GROUP?</h2>
+              <img src="assets/img/peoples.svg" alt="">
+              <p><span>Go to school. Study hard, Get a job. Work hard.</span> 
+                Get married and work and hope they won’t fire you when you are old & until you retire.
+                </p>
+              <a href="#" class="intro-video">
+                <img src="assets/img/intro-video.jpg" alt="">
+                <span class="icon"><img src="assets/img/play-icon.svg" alt=""></span>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="section-block mononpoly-section">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-7 offset-lg-5">
+            <div class="list-block">
+              <h2>DO YOU PREFER MONOPOLY MONEY OR REAL CRYPTO ASSETS ?
+              </h2>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <script src="assets/js/jquery.slim.min.js"></script>
     <script src="assets/js/popper.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
