--- a/index.html
+++ b/index.html
@@ -102,16 +102,255 @@
 
     <div class="section-block mononpoly-section">
       <div class="container">
-        <div class="row">
-          <div class="col-lg-7 offset-lg-5">
+        <div class="row align-items-center">
+          <div class="col-lg-6">
+            <img src="assets/img/bitcoin-phone.png" alt="" class="phone-bitcoid-stats">
+          </div>
+          <div class="col-lg-6">
             <div class="list-block">
-              <h2>DO YOU PREFER MONOPOLY MONEY OR REAL CRYPTO ASSETS ?
+              <h2>DO YOU PREFER <span class="red">MONOPOLY MONEY</span> OR <span class="red"><i>REAL CRYPTO ASSETS</i></span> ?
               </h2>
+              <h4 class="blue">DO YOU THINK THESE ARE RIGHT CHOICES ?</h4>
+              <ul>
+                <li>Do you think <i class="blue">gambling your investment</i> on a <i class="blue">new company</i> at $0.10/$0.01 with <i class="blue">no value</i> is a good choice?</li>
+                <li>To be able to <i class="blue">own millions or billions of coins</i>, but it’s all <i class="blue">Monopoly money</i>?</li>
+                <li><i class="blue">Mining machine </i> being sold to you at 10x the real price, <i class="blue">mining a fake coin</i>?</li>
+                <li>As long as it <i class="blue">endorsed by</i> someone with a Lamborghini or <i class="blue">honorific title</i> means they are <i class="blue">legit</i>?</li>
+                <li>Do you think <i class="blue">marketing to 3 countries</i> is better than <i class="blue">marketing to 192 countries</i>?</li>
+              </ul>
             </div>
           </div>
         </div>
       </div>
     </div>
+
+    <div class="section-block roi-section">
+      <div class="container h-100">
+        <div class="row align-items-end  h-100">
+          <div class="col-lg-12">
+            <div class="roi-text-wrap">
+              <div class="roi-text">
+                <h2>Did you know average <span class="blue">REAL CRYPTOCURRENCY RETURNS</span> is approx: 
+                </h2>
+                <h2 class="sub-title"><span class="red">5000%</span> ~ <span class="red">200,000%</span><br> IN JUST <span class="red">3</span> YEARS?</h2>
+                <a href="#" class="gradient-btn global">BUY NOW at $0.50</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="section-block knowledge-section">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12">
+            <div class="knowledge-box">
+              <img src="assets/img/man-flying.svg" alt="" class="flying-man">
+              <img src="assets/img/women-flying.svg" alt="" class="flying-women">
+              <h2>Don’t Know Anything about Cryptocurrency? <br>
+                Get Your <span class="blue">GUIDANCE</span>  from
+                </h2>
+                <h2 class="red">TOP REPUTABLE MULTIMILLION DOLLAR GLOBAL COMPANIES</h2>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="section-block categories-section">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-7">
+            <div class="list-block">
+              <h2>DO YOU BELONG TO ONE OR MORE
+                OF THE <i class="red">CATEGORIES</i> BELOW?</h2>
+              <ul>
+                <li>Want to benefit and <i class="blue">invest in REAL cryptocurrency</i>, but don’t know where to begin?</li>
+                <li>Got <i class="blue">cheated</i> by Fake Cryptocurrencies?</li>
+                <li>Wondering why the crypto you invested in keeps <i class="blue">decreasing in value</i>?</li>
+                <li>Want to diversify from <i class="blue">stocks, properties, traditional business to crypto</i>?</li>
+                <li>Looking for an <i class="blue">alternative to Bitcoin</i>, but with lesser volatility and at an entry level price? </li>
+                <li>You believe you invested in a <i class="blue">real crypto</i>, and want to know why you still <i class="blue">made a loss</i>?</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="section-block videodesc-section red-gradient">
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-lg-3 left">
+            <ul>
+              <li>BANKS GOING INTO CRYPTO</li>
+              <li>BEATING INFLATION USING CRYPTO</li>
+              <li>PREDICT FUTURE PRICING USING TOTAL SUPPLY</li>
+            </ul>
+          </div>
+          <div class="col-lg-6">
+            <a href="#" class="intro-video">
+              <img src="assets/img/intro-video.jpg" alt="">
+              <span class="icon"><img src="assets/img/play-icon.svg" alt=""></span>
+            </a>
+          </div>
+          <div class="col-lg-3 right">
+            <ul>
+              <li>BENEFITS OF EXCHANGE PLATFORM</li>
+              <li>BITTO 3X FASTER TRANSACTION THAN BTC</li>
+              <li>BITTO HAS MULTI UTILITY, BITCOIN IS SPECULATIVE</li>
+            </ul>
+          </div>
+        </div>
+        <div class="row text-center">
+          <div class="col-lg-12">
+            <a href="#" class="gradient-btn global">BUY NOW at $0.50</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="section-block brands-section">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12">
+            <h2 class="title">BITTO IS NOW ON</h2>
+            <p class="blue">Did You Know That Only Real Genuine Cryptocurrency Will Appear on More than 10 Crypto Websites & Mobile APPS?</p>
+            <div class="brands">
+              <div class="row">
+                <div class="col-lg-2 offset-1">
+                  <img src="assets/img/brands/CoinMarketCap.svg" alt="">
+                </div>
+                <div class="col-lg-2">
+                  <img src="assets/img/brands/COINGECKO.svg" alt="">
+                </div>
+                <div class="col-lg-2">
+                  <img src="assets/img/brands/etherscan.svg" alt="">
+                </div>
+                <div class="col-lg-2">
+                  <img src="assets/img/brands/blockfolio.svg" alt="">
+                </div>
+                <div class="col-lg-2">
+                  <img src="assets/img/brands/Delta-Logo.svg" alt="">
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-lg-2 offset-lg-2">
+                  <img src="assets/img/brands/bitcointalk.svg" alt="">
+                </div>
+                <div class="col-lg-2">
+                  <img src="assets/img/brands/LIVECOIN.svg" alt="">
+                </div>
+                <div class="col-lg-2">
+                  <img src="assets/img/brands/coincodex.svg" alt="">
+                </div>
+                <div class="col-lg-2">
+                  <img src="assets/img/brands/coincodex.svg" alt="">
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-lg-2 offset-lg-1">
+                  <img src="assets/img/brands/coinlore.svg" alt="">
+                </div>
+                <div class="col-lg-2">
+                  <img src="assets/img/brands/coinstats.svg" alt="">
+                </div>
+                <div class="col-lg-2">
+                  <img src="assets/img/brands/coinlib.svg" alt="">
+                </div>
+                <div class="col-lg-2">
+                  <img src="assets/img/brands/cryptonews.svg" alt="">
+                </div>
+                <div class="col-lg-2">
+                  <img src="assets/img/brands/blockchart.svg" alt="">
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-lg-2 offset-lg-3">
+                  <img src="assets/img/brands/bituniverse.svg" alt="">
+                </div>
+                <div class="col-lg-2">
+                  <img src="assets/img/brands/cryptomkt.svg" alt="">
+                </div>
+                <div class="col-lg-2">
+                  <img src="assets/img/brands/3commas.svg" alt="">
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-lg-12 text-center mt-5">
+                  <p class="blue">AUTHORISED WALLET</p>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-lg-2 offset-1">
+                  <img src="assets/img/brands/trust-wallet.svg" alt="">
+                </div>
+                <div class="col-lg-2">
+                  <img src="assets/img/brands/enjin.svg" alt="">
+                </div>
+                <div class="col-lg-2">
+                  <img src="assets/img/brands/CoinPayments.svg" alt="">
+                </div>
+                <div class="col-lg-2">
+                  <img src="assets/img/brands/mew.svg" alt="">
+                </div>
+                <div class="col-lg-2">
+                  <img src="assets/img/brands/eidoo.svg" alt="">
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="section-block preview-section">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-lg-10">
+            <h2 class="title-text">HAVE YOU EVER WISH YOU WERE THE <i class="red">FIRST BITCOIN BUYER</i> WHO BOUGHT <i class="red">10,000 BITCOIN</i> WITH JUST <i class="blue">2 REGULAR PIZZAS</i> </h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-12">
+            <div class="preview-div">
+              <img src="assets/img/preview-page.jpg" alt="" class="preview">
+              <div class="disclaimer-text">
+                <p>Disclaimer: <a target="_blank" href="https://bitcointalk.org/index.php?topic=137.0">https://bitcointalk.org/index.php?topic=137.0</a></p>
+              </div>
+              <div class="preview-content">
+                <p><span>USD 110 MILLION</span><br>
+                  WORTH</p>
+                  <p class="big">10,000
+                  </p>
+                  <p>BITCOIN</p>
+                  <p class="big">2</p>
+                  <p> REGULAR PIZZA</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="section-block btc-section">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-5">
+            <img src="assets/img/coin-laptop.svg" alt="">
+          </div>
+          <div class="col-lg-7">
+            <h2>IF YOU WERE GIVEN THE TIME AGAIN, ARE YOU SURE YOU WILL BUY 10,000 BTC WITH 2 REGULAR PIZZAS?</h2>
+            <p>BECAUSE YOU KNEW THE <span>FUTURE VALUE</span> TODAY, YOU WOULD HAVE SAID <span>YES</span>. BUT GIVEN THE SAME SCENARIO <span>IN 2010</span>, YOUR ANSWER WOULD PROBABLY BE <span>NO</span>. AS YOU DID NOT HAVE THE FORESIGHT OR UNDERSTANDING OF ITS VALUE.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
 
     <script src="assets/js/jquery.slim.min.js"></script>
     <script src="assets/js/popper.min.js"></script>
