addedd responsive css

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Bitto</title>
 
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="assets/css/fontawesome.min.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
@@ -32,7 +33,9 @@
                   <img src="assets/img/bitto-logo.png" alt="">
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
+                  <span class="navbar-toggler-icon">
+                    <i class="fas fa-bars"></i>
+                  </span>
                 </button>
               
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -58,21 +61,32 @@
                     <li class="nav-item">
                       <a class="nav-link" href="#">P-O-S</a>
                     </li>
-                    <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        English <img src="assets/img/angle-down.png" alt="">
-                      </a>
-                      <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item active" href="#">English</a>
-                        <a class="dropdown-item" href="#">简体中文</a>
-                        <a class="dropdown-item" href="#">繁體中文</a>
-                        <a class="dropdown-item" href="#">Malay</a>
-                        <a class="dropdown-item" href="#">Tiếng Việt</a>
-                        <a class="dropdown-item" href="#">日本語</a>
-                      </div>
-                    </li>
                   </ul>
+                  <div class="mobile-buttons">
+                    <div class="row">
+                      <div class="col">
+                        <a href="#" class="gradient-btn global">BUY BITTO NOW</a>
+                      </div>
+                      <div class="col">
+                        <a href="#" class="gradient-btn global transparent">LEARN MORE</a>
+                      </div>
+                    </div>
+                  </div>
                 </div>
+                
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    English <img src="assets/img/angle-down.png" alt="">
+                  </a>
+                  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item active" href="#">English</a>
+                    <a class="dropdown-item" href="#">简体中文</a>
+                    <a class="dropdown-item" href="#">繁體中文</a>
+                    <a class="dropdown-item" href="#">Malay</a>
+                    <a class="dropdown-item" href="#">Tiếng Việt</a>
+                    <a class="dropdown-item" href="#">日本語</a>
+                  </div>
+                </li>
               </nav>
             </div>
           </div>
@@ -221,61 +235,61 @@
             <p class="blue">Did You Know That Only Real Genuine Cryptocurrency Will Appear on More than 10 Crypto Websites & Mobile APPS?</p>
             <div class="brands">
               <div class="row">
-                <div class="col-lg-2 offset-1">
+                <div class="col-lg-2 offset-lg-1 col-md-6 col-6">
                   <img src="assets/img/brands/CoinMarketCap.svg" alt="">
                 </div>
-                <div class="col-lg-2">
+                <div class="col-lg-2 col-md-6 col-6">
                   <img src="assets/img/brands/COINGECKO.svg" alt="">
                 </div>
-                <div class="col-lg-2">
+                <div class="col-lg-2 col-md-6 col-6">
                   <img src="assets/img/brands/etherscan.svg" alt="">
                 </div>
-                <div class="col-lg-2">
+                <div class="col-lg-2 col-md-6 col-6">
                   <img src="assets/img/brands/blockfolio.svg" alt="">
                 </div>
-                <div class="col-lg-2">
+                <div class="col-lg-2 col-md-12 col-12">
                   <img src="assets/img/brands/Delta-Logo.svg" alt="">
                 </div>
               </div>
               <div class="row">
-                <div class="col-lg-2 offset-lg-2">
+                <div class="col-lg-2 offset-lg-2 col-md-6 col-6">
                   <img src="assets/img/brands/bitcointalk.svg" alt="">
                 </div>
-                <div class="col-lg-2">
+                <div class="col-lg-2 col-md-6 col-6">
                   <img src="assets/img/brands/LIVECOIN.svg" alt="">
                 </div>
-                <div class="col-lg-2">
+                <div class="col-lg-2 col-md-6 col-6">
                   <img src="assets/img/brands/coincodex.svg" alt="">
                 </div>
-                <div class="col-lg-2">
+                <div class="col-lg-2 col-md-6 col-6">
                   <img src="assets/img/brands/coincodex.svg" alt="">
                 </div>
               </div>
               <div class="row">
-                <div class="col-lg-2 offset-lg-1">
+                <div class="col-lg-2 offset-lg-1 col-md-6 col-6">
                   <img src="assets/img/brands/coinlore.svg" alt="">
                 </div>
-                <div class="col-lg-2">
+                <div class="col-lg-2 col-md-6 col-6">
                   <img src="assets/img/brands/coinstats.svg" alt="">
                 </div>
-                <div class="col-lg-2">
+                <div class="col-lg-2 col-md-6 col-6">
                   <img src="assets/img/brands/coinlib.svg" alt="">
                 </div>
-                <div class="col-lg-2">
+                <div class="col-lg-2 col-md-6 col-6">
                   <img src="assets/img/brands/cryptonews.svg" alt="">
                 </div>
-                <div class="col-lg-2">
+                <div class="col-lg-2 col-md-12 col-12">
                   <img src="assets/img/brands/blockchart.svg" alt="">
                 </div>
               </div>
               <div class="row">
-                <div class="col-lg-2 offset-lg-3">
+                <div class="col-lg-2 offset-lg-3 col-md-6 col-6">
                   <img src="assets/img/brands/bituniverse.svg" alt="">
                 </div>
-                <div class="col-lg-2">
+                <div class="col-lg-2 col-md-6 col-6">
                   <img src="assets/img/brands/cryptomkt.svg" alt="">
                 </div>
-                <div class="col-lg-2">
+                <div class="col-lg-2 col-md-12 col-12">
                   <img src="assets/img/brands/3commas.svg" alt="">
                 </div>
               </div>
@@ -285,19 +299,19 @@
                 </div>
               </div>
               <div class="row">
-                <div class="col-lg-2 offset-1">
+                <div class="col-lg-2 offset-lg-1 col-md-6 col-6">
                   <img src="assets/img/brands/trust-wallet.svg" alt="">
                 </div>
-                <div class="col-lg-2">
+                <div class="col-lg-2 col-md-6 col-6">
                   <img src="assets/img/brands/enjin.svg" alt="">
                 </div>
-                <div class="col-lg-2">
+                <div class="col-lg-2 col-md-6 col-6">
                   <img src="assets/img/brands/CoinPayments.svg" alt="">
                 </div>
-                <div class="col-lg-2">
+                <div class="col-lg-2 col-md-6 col-6">
                   <img src="assets/img/brands/mew.svg" alt="">
                 </div>
-                <div class="col-lg-2">
+                <div class="col-lg-2 col-md-12 col-12">
                   <img src="assets/img/brands/eidoo.svg" alt="">
                 </div>
               </div>
@@ -344,11 +358,27 @@
             <img src="assets/img/coin-laptop.svg" alt="">
           </div>
           <div class="col-lg-7">
-            <h2>IF YOU WERE GIVEN THE TIME AGAIN, ARE YOU SURE YOU WILL BUY 10,000 BTC WITH 2 REGULAR PIZZAS?</h2>
-            <p>BECAUSE YOU KNEW THE <span>FUTURE VALUE</span> TODAY, YOU WOULD HAVE SAID <span>YES</span>. BUT GIVEN THE SAME SCENARIO <span>IN 2010</span>, YOUR ANSWER WOULD PROBABLY BE <span>NO</span>. AS YOU DID NOT HAVE THE FORESIGHT OR UNDERSTANDING OF ITS VALUE.</p>
+            <h2>IF YOU WERE GIVEN THE TIME AGAIN, <span class="yellow">ARE YOU SURE YOU WILL BUY 10,000 BTC</span> WITH 2 REGULAR PIZZAS?</h2>
+            <p>BECAUSE YOU KNEW THE <span>FUTURE VALUE</span> TODAY, YOU WOULD HAVE SAID <span><u>YES</u></span>. BUT GIVEN THE SAME SCENARIO <span>IN 2010</span>, YOUR ANSWER WOULD PROBABLY BE <span><u>NO</u></span>. AS YOU DID NOT HAVE THE FORESIGHT OR UNDERSTANDING OF ITS VALUE.</p>
           </div>
         </div>
       </div>
+    </div>
+
+    <div class="section-block black-section">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-lg-10">
+            <h2>WOULD YOU WANT TO MISS THE SAME EXACT OPPORTUNITY AGAIN?
+              <span class="blue">GIVING YOU A SECOND CHANCE</span></h2>
+              <h1>INTRODUCING BITTO !</h1>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="section-block">
+
     </div>
 
 
