added more section

--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                   <img src="assets/img/brands/coincodex.svg" alt="">
                 </div>
                 <div class="col-lg-2 col-md-6 col-6">
-                  <img src="assets/img/brands/coincodex.svg" alt="">
+                  <img src="assets/img/brands/coinranking-logo.svg" alt="">
                 </div>
               </div>
               <div class="row">
@@ -325,7 +325,7 @@
     <div class="section-block preview-section">
       <div class="container">
         <div class="row justify-content-center">
-          <div class="col-lg-10">
+          <div class="col-lg-10 text-center">
             <h2 class="title-text">HAVE YOU EVER WISH YOU WERE THE <i class="red">FIRST BITCOIN BUYER</i> WHO BOUGHT <i class="red">10,000 BITCOIN</i> WITH JUST <i class="blue">2 REGULAR PIZZAS</i> </h2>
           </div>
         </div>
@@ -377,8 +377,94 @@
       </div>
     </div>
 
-    <div class="section-block">
+    <div class="section-block services-section white-gradient">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-lg-11 text-center">
+            <h2 class="title-text">NOW, IF YOU ARE LIKE MOST PEOPLE,<br> <i class="red">YOUR IMMEDIATE REACTION WOULD BE FOLLOWED BY THESE REASONS</i></h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-3 col-md-6">
+            <div class="single-service">
+              <img src="assets/img/good-icon.svg" alt="">
+              <h4>TOO GOOD TO BE TRUE</h4>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6">
+            <div class="single-service">
+              <img src="assets/img/money-icon.svg" alt="">
+              <h4>I DONT HAVE  THE MONEY</h4>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6">
+            <div class="single-service">
+              <img src="assets/img/lazy-icon.svg" alt="">
+              <h4>IM TOO LAZY TO LEARN MORE</h4>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6">
+            <div class="single-service">
+              <img src="assets/img/nex-icon.svg" alt="">
+              <h4>Maybe Next Time</h4>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-12">
+            <div class="texts-content">
+              <p>Sound familiar?</p>
+              <p>That’s how most people view OPPORTUNITY.</p>
+              <p class="blue">They allow their fears and doubts to hold them back from reaching their full financial potential.</p>
+              <p class="red">That’s a HUGE mistake, and I’m going to tell you why.</p>
+              <p>Do you know what one of the <strong><u><i>biggest regrets</i></u></strong> of the elderly is?</p>
+              <p>It’s that they wish they had taken more chances…that rather than allowing fear to dictate their <i class="red">FINANCIAL</i> choices, they’d pursued and take <i class="red">CHANCES</i>. That’s why most BTC holders are youngsters.</p>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-12">
+            <div class="bordered-box">
+              <h2><i>IF YOUR SITUATION HAS BEEN THE SAME FOR THE <span class="blue">PAST FEW YEARS</span>. THE ONLY WAY THINGS WILL BE BETTER IS IF YOU HAVE THE <span class="blue">COURAGE TO DO SOMETHING DIFFERENT AND TAKE CHANCES</span></i></h2>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
+
+    <div class="section-block bitcointalk-section">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-lg-10 text-center">
+            <h2 class="title-text"><i class="red">BITCOINTALK</i> IS THE MOST BASIC REQUIREMENT FOR A <i class="blue">CRYPTO BLOCKCHAIN PROJECT</i> TO DETERMINE <i class="blue">THEIR GENUINE REPUTATION & VALUE</i> WITHIN THE BLOCKCHAIN COMMUNITY </h2>
+          </div>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-lg-4">
+            <img src="assets/img/bitcointalk.svg" alt="" class="bitcoin">
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-12">
+            <div class="preview-div">
+              <img src="assets/img/bitto-screenshot.jpg" alt="" class="preview">
+              <div class="disclaimer-text">
+                <p>Disclaimer: <a target="_blank" href="https://bitcointalk.org/index.php?topic=2624745.0">https://bitcointalk.org/index.php?topic=2624745.0</a></p>
+              </div>
+              <div class="preview-content">
+                <p><span>SINCE 2017</span><br>
+                  ESTABLISHED</p>
+                  <p class="big">76868
+                  </p>
+                  <p>INDIVIDUAL VIEWS</p>
+                  <p class="big">48</p>
+                  <p>COMMENT PAGES</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
 
 
