added the changes with new section

--- a/index.html
+++ b/index.html
@@ -1124,6 +1124,271 @@
       </div>
     </div>
 
+    <div class="section-block black-section">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-lg-11 text-center">
+            <h2 class="title-text"><i class="text-white">WHAT ARE YOU WAITING FOR?</i></h2>
+            <h2 class="title-text"><i class="blue">BUY BITTO NOW</i>
+              ON <i>CREX24 EXCHANGE</i> OR <i>VINDAX EXCHANGE</i></h2>
+          </div>
+        </div>
+        <div class="row align-items-end justify-content-center text-center">
+          <div class="col-lg-4">
+            <img src="assets/img/crex24.svg" alt="">
+            <a href="#" class="gradient-btn global">BUY NOW at $0.50</a>
+          </div>
+          <div class="col-lg-4">
+            <img src="assets/img/vindax.svg" alt="">
+            <a href="#" class="gradient-btn global">BUY NOW at $0.50</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="section-block join-section">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-lg-8">
+            <div class="section-title text-center">
+              <h2>JOIN THE BITTO GLOBAL COMMUNITY</h2>
+              <p>If you don't see your Local BITTO Country, Join & be Our Local Community Representative Today!</p>
+            </div>
+          </div>
+        </div>
+        <div class="row align-items-end">
+          <div class="col-lg-4">
+            <img src="assets/img/join-img.svg" alt="">
+          </div>
+          <div class="col-lg-8">
+            <div class="social-lists">
+              <div class="row">
+                <div class="col-lg-4 col-md-6">
+                  <a href="#" class="single-social">
+                    <img src="assets/img/telegram.svg" alt="">
+                    <span>Telegram News</span>
+                  </a>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                  <a href="#" class="single-social">
+                    <img src="assets/img/bitcoin.svg" alt="">
+                    <span>Bitcointalk</span>
+                  </a>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                  <a href="#" class="single-social">
+                    <img src="assets/img/coinmarketcap-icon.svg" alt="">
+                    <span>Coinmarketcap</span>
+                  </a>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                  <a href="#" class="single-social">
+                    <img src="assets/img/telegram.svg" alt="">
+                    <span>Telegram Channels</span>
+                  </a>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                  <a href="#" class="single-social">
+                    <img src="assets/img/medium.svg" alt="">
+                    <span>Medium</span>
+                  </a>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                  <a href="#" class="single-social">
+                    <img src="assets/img/reddit.svg" alt="">
+                    <span>Reddit</span>
+                  </a>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                  <a href="#" class="single-social">
+                    <img src="assets/img/facebook.svg" alt="">
+                    <span>Facebook</span>
+                  </a>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                  <a href="#" class="single-social">
+                    <img src="assets/img/instagram.svg" alt="">
+                    <span>Instagram</span>
+                  </a>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                  <a href="#" class="single-social">
+                    <img src="assets/img/twiiter.svg" alt="">
+                    <span>Twitter</span>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="section-block question-section">
+      <div class="container">
+        <div class="row align-items-end">
+          <div class="col-lg-9">
+            <h4>Have Any Questions?</h4>
+            <p>Please view the official <strong>BITTO FAQ</strong> to see if your question has already been answered:
+              Feel free to contact us through our support team.</p>
+          </div>
+          <div class="col-lg-3">
+            <a href="#" class="white-btn">CONTACT US</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    
+    <div class="footer">
+      <div class="footer-top">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-3 col-md-6 align-self-center">
+              <a href="#" class="footer-logo">
+                <img src="assets/img/bitto-logo.png" alt="">
+              </a>
+              <span class="copy-text">&copy; 2017 - 2020 Bitto Exchange Pte Ltd. </span>
+            </div>
+            <div class="col-lg-3 col-md-6 align-self-center">
+              <a href="#" class="gradient-btn global">BUY NOW at $0.50</a>
+            </div>
+            <div class="col-lg-2 col-md-4">
+              <div class="footer-link">
+                <h4>Services</h4>
+                <ul>
+                  <li><a href="#">Web Development</a></li>
+                  <li><a href="#">IEO</a></li>
+                  <li><a href="#">Smart Contract</a></li>
+                </ul>
+              </div>
+            </div>
+            <div class="col-lg-2 col-md-4">
+              <div class="footer-link">
+                <h4>About Us</h4>
+                <ul>
+                  <li><a href="#">Why BITTO?</a></li>
+                  <li><a href="#">Features</a></li>
+                  <li><a href="#">Join Our Community</a></li>
+                </ul>
+              </div>
+            </div>
+            <div class="col-lg-2 col-md-4">
+              <div class="footer-link">
+                <h4>Confirmation</h4>
+                <ul>
+                  <li><a href="#">Contract Information</a></li>
+                  <li><a href="#">Whitepaper</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="footer-brands">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-12">
+              <div class="brand-list">
+                <div class="single-brand">
+                  <img src="assets/img/brands-gray/cmc.svg" alt="">
+                </div>
+                <div class="single-brand">
+                  <img src="assets/img/brands-gray/COINGECKO.svg" alt="">
+                </div>
+                <div class="single-brand">
+                  <img src="assets/img/brands-gray/etherscan.svg" alt="">
+                </div>
+                <div class="single-brand">
+                  <img src="assets/img/brands-gray/blockfolio.svg" alt="">
+                </div>
+                <div class="single-brand">
+                  <img src="assets/img/brands-gray/Delta-Logo.svg" alt="">
+                </div>
+                <div class="single-brand">
+                  <img src="assets/img/brands-gray/coincodex.svg" alt="">
+                </div>
+                <div class="single-brand">
+                  <img src="assets/img/brands-gray/coinranking-logo.svg" alt="">
+                </div>
+                <div class="single-brand">
+                  <img src="assets/img/brands-gray/LIVECOIN.svg" alt="">
+                </div>
+                <div class="single-brand">
+                  <img src="assets/img/brands-gray/bitcointalk1.svg" alt="">
+                </div>
+                <div class="single-brand">
+                  <img src="assets/img/brands-gray/coinstats.svg" alt="">
+                </div>
+                <div class="single-brand">
+                  <img src="assets/img/brands-gray/coinlib.svg" alt="">
+                </div>
+                <div class="single-brand">
+                  <img src="assets/img/brands-gray/blockchart.svg" alt="">
+                </div>
+                <div class="single-brand">
+                  <img src="assets/img/brands-gray/bituniverse.svg" alt="">
+                </div>
+                <div class="single-brand">
+                  <img src="assets/img/brands-gray/cryptonews.svg" alt="">
+                </div>
+                <div class="single-brand">
+                  <img src="assets/img/brands-gray/cryptomkt.svg" alt="">
+                </div>
+                <div class="single-brand">
+                  <img src="assets/img/brands-gray/coinlore.svg" alt="">
+                </div>
+                <div class="single-brand">
+                  <img src="assets/img/brands-gray/3commas.svg" alt="">
+                </div>
+                <div class="single-brand">
+                  <img src="assets/img/brands-gray/fxh.svg" alt="">
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-lg-12 text-center">
+              <h4 class="title">AUTHORISED WALLET</h4>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-lg-12">
+              <div class="brand-list wallets">
+                <div class="single-brand">
+                  <img src="assets/img/brands-gray/trust-wallet.svg" alt="">
+                </div>
+                <div class="single-brand">
+                  <img src="assets/img/brands-gray/enjin.svg" alt="">
+                </div>
+                <div class="single-brand">
+                  <img src="assets/img/brands-gray/CoinPayments.svg" alt="">
+                </div>
+                <div class="single-brand">
+                  <img src="assets/img/brands-gray/mew.svg" alt="">
+                </div>
+                <div class="single-brand">
+                  <img src="assets/img/brands-gray/eidoo.svg" alt="">
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-lg-12 text-center">
+              <span class="copy-text">Founded in 2017 and headquartered in the U.K and Labuan, BITTO is a global cryptocurrency exchange that provides blockchain technology and digital asset trading services which include spot trading, contract trading, lending, OTC, IEO, industrial investment, Crypto Project Creation, Crypto Legal Advisory, etc. We have more than 50,000 registered users and members on our social media and platform.</span>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="footer-bottom">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-12 text-center">
+              <span class="copy-text">Copyright &copy; 2020 Bitto Exchange Pte Ltd. co.number 11244276. All Rights Reserved</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <script src="assets/js/jquery.slim.min.js"></script>
     <script src="assets/js/popper.min.js"></script>
