--- a/index.html
+++ b/index.html
@@ -1158,10 +1158,10 @@
           </div>
         </div>
         <div class="row align-items-end">
-          <div class="col-lg-4" data-aos="fade-up" data-aos-duration="1000">
+          <div class="col-lg-4">
             <img src="assets/img/join-img.svg" alt="">
           </div>
-          <div class="col-lg-8" data-aos="fade-up" data-aos-duration="1000">
+          <div class="col-lg-8" data-aos="fade-up" data-aos-duration="500">
             <div class="social-lists">
               <div class="row">
                 <div class="col-lg-4 col-md-6">
@@ -1228,7 +1228,7 @@
     <div class="section-block question-section">
       <div class="container">
         <div class="row align-items-end">
-          <div class="col-lg-9" data-aos="fade-up" data-aos-duration="1000">
+          <div class="col-lg-9">
             <h4>Have Any Questions?</h4>
             <p>Please view the official <strong>BITTO FAQ</strong> to see if your question has already been answered:
               Feel free to contact us through our support team.</p>
@@ -1244,16 +1244,16 @@
       <div class="footer-top">
         <div class="container">
           <div class="row">
-            <div class="col-lg-3 col-md-6 align-self-center" data-aos="fade-up" data-aos-duration="1000">
+            <div class="col-lg-3 col-md-6 align-self-center">
               <a href="#" class="footer-logo">
                 <img src="assets/img/bitto-logo.png" alt="">
               </a>
               <span class="copy-text">&copy; 2017 - 2020 Bitto Exchange Pte Ltd. </span>
             </div>
-            <div class="col-lg-3 col-md-6 align-self-center"> data-aos="fade-up" data-aos-duration="1000"
+            <div class="col-lg-3 col-md-6 align-self-center">
               <a href="#" class="gradient-btn global">BUY NOW at $0.50</a>
             </div>
-            <div class="col-lg-2 col-md-4" data-aos="fade-up" data-aos-duration="1000">
+            <div class="col-lg-2 col-md-4">
               <div class="footer-link">
                 <h4>Services</h4>
                 <ul>
@@ -1263,7 +1263,7 @@
                 </ul>
               </div>
             </div>
-            <div class="col-lg-2 col-md-4" data-aos="fade-up" data-aos-duration="1000">
+            <div class="col-lg-2 col-md-4">
               <div class="footer-link">
                 <h4>About Us</h4>
                 <ul>
@@ -1289,7 +1289,7 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-12">
-              <div class="brand-list" data-aos="fade-up" data-aos-duration="1000">
+              <div class="brand-list">
                 <div class="single-brand">
                   <img src="assets/img/brands-gray/cmc.svg" alt="">
                 </div>
@@ -1353,7 +1353,7 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-lg-12" data-aos="fade-up" data-aos-duration="1000">
+            <div class="col-lg-12">
               <div class="brand-list wallets">
                 <div class="single-brand">
                   <img src="assets/img/brands-gray/trust-wallet.svg" alt="">
